# DeepLecture

./: .gitignore  .gitmessage  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE_GUIDE.md  CODE-STRUCTURE-REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION-CHECKLIST.md  LICENSE  Makefile  QUICK-START-GUIDE.md  README-RESEARCH.md  README.md  RESEARCH-CASCADING-CONFIG.md  REVIEW-FUNCTIONAL-CORRECTNESS.md  SECURITY.md  compound-engineering.local.md  package.json  plan.json  pyproject.toml  review-domain-A-core-pipeline.md  review-domain-B-ai-generation.md  review-domain-C-error-handling.md  review-domain-D-state-sse-config.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-pr-review.yml  code-review.yml
.omc/: project-memory.json
.omc/plans/: voiceover-quick-toggle.md
.omc/state/: subagent-tracking.json
.tmp/: external-review-input-20260128-100939.md  external-review-output-20260128-100939.txt  issue-12-bold-proposal.md  issue-12-consensus.md  issue-12-context.md  issue-12-critique.md  issue-12-debate.md  issue-12-external-review-input.md  issue-12-reducer.md  issue-14-bold-proposal.md  issue-14-context.md  issue-14-critique.md  issue-14-debate.md  issue-14-external-review-input.md  issue-14-external-review-output.txt  issue-14-reducer.md  issue-6-bold-proposal.md  issue-6-context.md  issue-6-critique.md  issue-6-debate.md  issue-6-external-review-input.md  issue-6-external-review-output.txt  issue-6-reducer.md  issue-8-bold-proposal.md  issue-8-context.md  issue-8-critique.md  issue-8-debate.md  issue-8-external-review-input.md  issue-8-external-review-output.txt  issue-8-reducer.md  issue-9-context.md  issue-9-lite-plan.md  issue-refine-6-bold-proposal.md  issue-refine-6-context.md  issue-refine-6-critique.md  issue-refine-6-debate.md  issue-refine-6-reducer.md  plan-of-issue-14.md  plan-of-issue-6.md  plan-of-issue-8.md  (+1 more)
.tmp/milestones/: issue-14-milestone-1.md
QwQ/: 1.py  1_bucket_v2.py  code.py
config/: conf.default.yaml
docs/: README.md  git-msg-tags.md  migrations.md
docs/architecture/: cheatsheet.md  task-state-and-sse.md  task-system-overview.md
docs/brainstorms/: 2026-02-10-cascading-task-config-brainstorm.md  2026-02-12-video-bookmarks-brainstorm.md  2026-02-13-prompt-template-config-brainstorm.md  2026-03-01-flashcards-brainstorm.md  2026-03-03-notes-read-aloud-brainstorm.md  2026-03-03-podcast-brainstorm.md  2026-03-03-prompt-template-ux-brainstorm.md  2026-03-03-test-exam-brainstorm.md  2026-03-08-projects-brainstorm.md  2026-03-28-realtime-recording-subtitles-brainstorm.md
docs/demo/: ai-qa.md  ai-voiceover.md  cheatsheet.md  dictionary.md  dual-subtitle.md  focus-mode.md  notes.md  quiz.md  screenshot-explanation.md  slide-lecture.md  smart-skip.md  timeline.md
docs/dev/: migration-guidance.md  quiz-api.md  task-api.md
docs/plans/: 2026-02-10-feat-cascading-task-configuration-plan.md  2026-02-12-feat-unified-settings-all-pervideo-overrides-plan.md  2026-02-12-feat-video-bookmarks-module-plan.md  2026-02-13-feat-global-prompt-template-library-plan.md  2026-03-01-feat-ai-flashcard-generation-plan.md  2026-03-03-feat-ai-test-paper-generation-plan.md  2026-03-03-feat-notes-read-aloud-tts-plan.md  2026-03-03-feat-podcast-dialogue-generation-plan.md  2026-03-03-feat-prompt-template-management-ux-overhaul-plan.md  2026-03-08-feat-projects-folder-organization-plan.md  2026-03-28-001-feat-source-language-auto-detection-plan.md  2026-03-28-002-feat-realtime-recording-subtitle-pipeline-plan.md
docs/reviews/: medical_debt_bankruptcy_notes.md
docs/tutorial/: 03-task-reconnect.md
docs/workflows/: task-recovery.md
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActionsDialog.tsx  AskTab.tsx  ExplanationList.tsx  FocusModeHandler.tsx  Header.tsx  HeaderActionPortal.tsx  Live2DCanvas.tsx  Live2DOverlay.tsx  Live2DViewer.tsx  MarkdownNoteEditor.tsx  MarkdownRenderer.tsx  MissedContentDialog.tsx  SettingsDialog.tsx  SubtitleList.tsx  ThemeToggle.tsx  (+5 more)
scripts/: compare_baselines.py  fix_explanations_markdown.py  performance_baseline.py  prepare_test_data.py  run-app.mjs  run_baseline.sh
tests/: README.md  conftest.py
todos/: 001-complete-p1-ai-test-paper-generation.md  002-pending-p1-read-aloud-session-isolation.md  003-pending-p2-read-aloud-thread-lifecycle-and-rate-limit.md  004-pending-p2-settings-template-description-clear-mismatch.md  005-pending-p2-read-aloud-test-coverage-gap.md  006-pending-p3-duplicate-read-aloud-import-in-container.md  007-pending-p3-read-aloud-sentence-list-render-complexity.md  010-pending-p1-read-aloud-stream-subscription-race.md  013-pending-p2-make-read-aloud-cache-variant-aware-and-read-through.md  014-pending-p2-harden-read-aloud-frontend-terminal-state-handling.md  015-pending-p2-fix-cjk-sentence-segmentation-in-markdown-filter.md
(+661 files in other folders)
